deps/v8/test/message/fail/class-methods-private-throw-write.out
*%(basename)s:8: TypeError: Private method '#a' is not writable
    this.#a = 1;
            ^
TypeError: Private method '#a' is not writable
    at new C (*%(basename)s:8:13)
    at *%(basename)s:11:1
